<resources>
    <string name="app_name">Cidades Inteligentes</string>
    <string name="add_nota">Adicionar nota</string>
    <string name="empty_not_saved">Descrição por preencher</string>
    <string name="descri_o">Descrição</string>
    <string name="guardar">Guardar</string>
    <string name="localiza_o">Localização</string>
    <string name="aviso_local">Não preencheu o campo de localização</string>
    <string name="aviso_desc">Não preencheu o campo de descrição</string>
    <string name="aviso_campo">Não preencheu os campos</string>
    <string name="erro_campos">Erro nos campos</string>
    <string name="notas">Notas</string>
    <string name="login">Login</string>
    <string name="utilizador">Utilizador</string>
    <string name="palavra_chave">Palavra-chave</string>
    <string name="emp_pass">Campo vazio</string>
    <string name="onShared">sharedon</string>
    <string name="ofShared">offShared</string>
    <string name="id">id</string>
    <string name="nome" translatable="false">nome</string>
    <string name="tlm" translatable="false">telemovel</string>
    <string name="logout">Sair</string>
    <string name="telem_vel">Telemóvel</string>
    <string name="data">Data</string>
    <string name="pontoDesc" translatable="false">pontoDesc</string>
    <string name="pontoTipo" translatable="false">pontoTipo</string>
    <string name="pontoLatlng" translatable="false">pontoLatlng</string>
    <string name="pontoImg" translatable="false">pontoImg</string>
    <string name="tipo_de_marca" translatable="false">Tipo de marca</string>
    <string name="adicionarmarco">Adicionar Marco</string>
    <string name="carregar_foto">Carregar foto</string>
    <string name="galeria">Galeria</string>
    <string name="descri_o_do_ponto">Descrição do ponto</string>
    <string name="categoria_do_ponto">Categoria do ponto</string>
    <string name="acidente">Acidente</string>
    <string name="obras">Obras</string>
    <string name="cancelar">Cancelar</string>
    <string name="submeter">Submeter</string>
    <string name="municipio">Municipio</string>

</resources>
