<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstActivity">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sl"
        android:alpha="0.4"
        android:scaleType="centerCrop"/>

<RelativeLayout

    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <EditText
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:id="@+id/user"
        android:alpha="0.7"
        android:hint="@string/utilizador"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:background="#FFFFFF"
        android:id="@+id/passe"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user"
        android:layout_width="200dp"
        android:alpha="0.7"
        android:paddingTop="10dp"
        android:layout_height="40dp"
        android:hint="@string/palavra_chave"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_below="@+id/passe"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Guardar credênciais"/>

    <Button
        android:id="@+id/login"
        android:layout_below="@+id/checkbox"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/notas"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/notas"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>


</RelativeLayout>