<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="1.5in">
    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20/03/2021 Sexta-feira"
        android:textSize="10dp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/hora"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="17:37"
        android:textSize="10dp"
        android:textColor="#000000"/>


        <EditText
            android:id="@+id/add_localizacao"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localiza_o"
            android:inputType="textAutoComplete"
            android:textSize="16dp"
            android:layout_below="@id/data"/>

    <EditText
        android:id="@+id/add_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descri_o"
        android:inputType="textAutoComplete"
        android:textSize="16dp"
        android:layout_below="@id/add_localizacao"/>
</RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button_save"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/guardar"
            android:onClick="Editar"
            android:textColor="#ffffff"

            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
